--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@tweenjs/tween.js": "^18.5.0",
     "accessor-fn": "^1.3.0",
     "kapsule": "^1.13.3",
-    "three": "^0.116.0",
+    "three": "git+https://github.com/kissk01/three.js.git",
     "three-globe": "^2.7.2",
     "three-render-objects": "^1.13.4"
   },
